--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "typescript": "^4.2.3",
     "webpack": "^5.30.0",
     "webpack-cli": "^4.6.0"
+  },
+  "dependencies": {
+    "ml-knn": "^3.0.0"
   }
 }
